--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>First Webpage</title>
 </head>
 <body>
-</h1>Hello world!</h1>
-</h1>I'm Christian Ryan Yasis</h1>
+<h1>Hello world!</h1>
+<h1>I'm Christian Ryan Yasis</h1>
 </body>
 </html>
